fix overflow problem

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,12 +1,9 @@
-
-
-
 .root{
-  left: 20px;
-  top: 20px;
   position: absolute;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 .hiddenT{
   background-color: red;
@@ -44,13 +41,14 @@
 
 
 
-.container{
+.container1{
   position: absolute;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-image: url("https://trello-backgrounds.s3.amazonaws.com/SharedBackground/1537x1920/de342fdc09a1fdc41b9b740ca299f923/photo-1584611488576-dec3ac160327.jpg");
   background-position: 50%;
-  overflow: scroll
+  overflow-x: hidden;
+  overflow-y: visible;
 }
 
 
@@ -59,6 +57,7 @@
   gap:40px;
   user-select: none;
   align-items: flex-start;
+  overflow: visible;
 }
 
 
